test/fails/bad_tags/mult5.lgl
tag a is vec2;

a x = [1., 1.];
vec2->a v2_a = [[1., 1.], [1., 1.]];
vec2 bad = v2_a * x; // Out of order